Bug 1788241 - Ensure WebRenderImageHost::OnReleased() is called in ImageBridgeParent::ActorDestroy() r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D156142